changed site template, saved old template in archive

--- a/index.html
+++ b/index.html
@@ -1,217 +1,166 @@
 <!DOCTYPE HTML>
 <!--
-	Hyperspace by HTML5 UP
+	Read Only by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<head>
+		<title>Nick Aldridge</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
 
-<head>
-	<title>Nick Aldridge</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
-	</noscript>
-</head>
-
-<body class="is-preload">
-
-	<!-- Sidebar -->
-	<section id="sidebar">
-		<div class="inner">
-			<nav>
-				<ul>
-					<li><a href="#intro">Welcome</a></li>
-					<li><a href="#one">Project Highlights</a></li>
-					<li><a href="#two">Background</a></li>
-					<li><a href="#three">Get in touch</a></li>
-				</ul>
-			</nav>
-		</div>
-	</section>
-
-	<!-- Wrapper -->
-	<div id="wrapper">
-
-		<!-- Intro -->
-		<section id="intro" class="wrapper style1 fullscreen fade-up">
-			<div class="inner">
-				<h1>Nick Aldridge - Jr. Developer</h1>
-				<p>I'm a Full-Stack Web Developer student in the DigitalCrafts bootcamp based in Houston, TX. I'm
-					currently looking for remote positions that utilize my skills, as well as helps me to grow in the
-					development community. I have experience putting together full-stack projects with the PERN stack
-					along with some Python, VBA, and analytical skills</p>
-
-				<p>On a personal note, I'm a fan of the Houston Astros, Star Wars, and any reason I can find to spend time outdoors. Serving in the Air Force allowed me the opportunity to travel and see more cultures than I could have imagined and it has left a lasting impression and desire to share those experiences. I also have a passion for animal advocacy and working with the community to improve our understanding of our impacts on the environment.</p>
-				<!-- <ul class="actions">
-					<li><a href="about.html" class="button scrolly">Learn more</a></li>
-				</ul> -->
-			</div>
-		</section>
-
-		<!-- One -->
-		<section id="one" class="wrapper style2 spotlights">
-			<section>
-				<a href="#" class="image"><img src="images/git2traveling_1.jpg" alt=""
-						data-position="center center" /></a>
-				<div class="content">
-					<div class="inner">
-						<h2>Git2Traveling</h2>
-						<p>Travel itinerary planner made to help users plan trips and outline their day-to-day
-							activities. Full-Stack implementation using Node.js and a PostgreSQL database.</p>
-						<ul class="actions">
-							<li><a href="https://github.com/naldridge/Git2Traveling" class="button">Visit the Repo</a>
-							</li>
-						</ul>
-					</div>
-				</div>
+		<!-- Header -->
+			<section id="header">
+				<header>
+					<span class="image avatar"><img src="images/logo_small.jpg" alt="" /></span>
+					<h1 id="logo"><a href="#">Nick Aldridge</a></h1>
+					<p>Jr. Web Developer<br />
+					Passionate Star Wars Fan</p>
+				</header>
+				<nav id="nav">
+					<ul>
+						<li><a href="#one" class="active">Background</a></li>
+						<li><a href="#two">Professional Skillset</a></li>
+						<li><a href="#three">Project Highlights</a></li>
+						<li><a href="#four">Get in Touch</a></li>
+					</ul>
+				</nav>
+				<footer>
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/nicholas-aldridge-177479145/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/naldridge" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:naldridge1360@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>		
+					</ul>
+				</footer>
 			</section>
-			<section>
-				<a href="https://rexcue.netlify.app/" class="image"><img src="images/rexcue_1.jpg" alt=""
-						data-position="top center" /></a>
-				<div class="content">
-					<div class="inner">
-						<h2>Rexcue</h2>
-						<p>Animal adoption finder tool that helps to highlight dog-breeds that are often overlooked at
-							adoption shelters. Click the image to see the live-site.</p>
-						<ul class="actions">
-							<li><a href="https://github.com/naldridge/Rexcue" class="button">Visit the Repo</a></li>
-						</ul>
-					</div>
-				</div>
-			</section>
-			<section>
-				<a href="#" class="image"><img src="images/pokemon_python_1.jpg" alt="" data-position="25% 25%" /></a>
-				<div class="content">
-					<div class="inner">
-						<h2>Pokemon Python</h2>
-						<p>Pokemon-gym battle rpg. Inspired by the classic pokemon games and fully-developed using
-							Python. Relive the intense experience of selecting your pokemon and navigating a hidden base
-							on your console!</p>
-						<ul class="actions">
-							<li><a href="https://github.com/naldridge/pokemon_python_version" class="button">Visit the
-									Repo</a></li>
-						</ul>
-					</div>
-				</div>
-			</section>
-		</section>
 
-		<!-- Two -->
-		<section id="two" class="wrapper style3 fade-up">
-			<div class="inner">
-				<h2>Background</h2>
-				<p>With 10 years of experience as an Intelligence Analyst, I utlize the critical-thinking and analytical
-					skills in combination with the technical resources and languages to solve problems and develop
-					tools.</p>
-				<div class="features">
-					<section>
-						<span class="icon solid major fa-code"></span>
-						<h3>Passionate Coding</h3>
-						<p>Coding, for me, is an expression of creativity and an outlet that is fed by my interests and
-							goals. I contstantly look for a technical solution to the questions that arise in my life.
-						</p>
-					</section>
-					<section>
-						<span class="icon solid major fa-bullhorn"></span>
-						<h3>Skilled Communicator</h3>
-						<p>A primary responsibility in my military service was ensuring a constant flow of communication
-							between analysts, customers, and leadership. Whether it's professional emails, training new
-							concepts, or presenting products to customers, effective communication is key.</p>
-					</section>
-					<section>
-						<span class="icon major fa-lightbulb"></span>
-						<h3>Critical Thinker</h3>
-						<p>Problem-solving has always been a passion of mine. I love finding creative solutions that
-							show off skills and uniquely present products.</p>
-					</section>
-					<section>
-						<span class="icon solid major fa-cogs"></span>
-						<h3>Fluent in Leadership/Followership Dynamics</h3>
-						<p>I have had the benefit in serving in both leader and follower roles and therefore use my
-							understanding of those roles to advance the goals of my projects/teams in a positive and
-							effective manner.</p>
-					</section>
-					<section>
-						<span class="icon solid major fa-globe"></span>
-						<h3>Avid Traveller</h3>
-						<p>I'm a nomadic spirit and pulled to many different regions. I'm open to relocating and
-							currently seeking remote-work possibilities.</p>
-					</section>
-					<section>
-						<span class="icon major fa-comment"></span>
-						<h3>Multi-lingual</h3>
-						<p>I have a background in linguistics and make a concerted effort to advance cultural
-							appreciation. I speak Arabic (Modern Standard) and have basic fluency in other languages.
-						</p>
-					</section>
-				</div>
-			</div>
-		</section>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-		<!-- Three -->
-		<section id="three" class="wrapper style1 fade-up">
-			<div class="inner">
-				<h2>Get in Contact</h2>
-				<div class="split style1">
-					<section>
-						<p>I am currently living in Houston, TX while I complete the DigitalCrafts full-time Web
-							Development bootcamp. However, when I finish the program I intend to travel the country and
-							therefore I am actively looking for remote-work opportunities. Please feel free to contact
-							me if you have an
-							opportunity you'd like to share.</p>
-						<form method="get" action="images/Nick_Aldridge_Resume.pdf">
-							<ul class="actions">
-								<li><button class="button primary" type="submit">Download Resume</button></li>
+				<!-- Main -->
+					<div id="main">
+
+						<!-- One -->
+							<section id="one">
+								<div class="image main" data-position="center">
+									<img src="images/cliffs_of_moher_unsplash.jpg" alt="" />
+								</div>
+								<div class="container">
+									<header class="major">
+										<h2>Nick Aldridge</h2>
+										<p>Entry-level computer programmer,<br />
+										senior-level Star Wars Fan.</p>
+									</header>
+									<p>I'm a Full-Stack Web Developer student in the DigitalCrafts bootcamp based in Houston, TX. I'm currently looking for remote positions that utilize my skills, as well as helps me to grow in the development community. I have experience putting together full-stack projects with the PERN stack along with some Python, VBA, and analytical skills</p>
+					
+									<p>On a personal note, I'm a fan of the Houston Astros, Star Wars, and any reason I can find to spend time outdoors. Serving in the Air Force allowed me the opportunity to travel and see more cultures than I could have imagined and it has left a lasting impression and desire to share those experiences. I also have a passion for animal advocacy and working with the community to improve our understanding of our impacts on the environment.</p>
+								</div>
+							</section>
+
+						<!-- Two -->
+							<section id="two">
+								<div class="container">
+									<h3>Professional Skillset</h3>
+									<p>With 10 years of experience as an Intelligence Analyst, I utlize the critical-thinking and analytical
+										skills in combination with the technical resources and languages to solve problems and develop
+										tools.</p>
+									<ul class="feature-icons">
+										<li class="icon solid fa-code">Passionate Coding</li>
+										<li class="icon solid fa-bullhorn">Skilled Communicator</li>
+										<li class="icon solid fa-lightbulb">Critical-Thinker</li>
+										<li class="icon solid fa-cogs">Experienced Leader/Follower</li>
+										<li class="icon solid fa-globe">Avid Traveller</li>
+										<li class="icon solid fa-comment">Multi-Lingual</li>
+									</ul>
+								</div>
+							</section>
+
+						<!-- Three -->
+							<section id="three">
+								<div class="container">
+									<h3>Project Highlights</h3>
+									<p>Looking at my programming projects is a sure-fire way to get a close look at my interests. Whether it's supporting local adoption shelters or trying to make travel a little more headache-free, my personality is on full display.</p>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/git2traveling_2.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Git2Traveling</h4>
+												<p>Travel itinerary planner made to help users plan trips and outline their day-to-day activities. Full-Stack implementation using Node.js and a PostgreSQL database.</p>
+												<ul class="actions">
+													<li><a href="https://github.com/naldridge/Git2Traveling" class="button primary fit">Visit the Repo</a>
+													</li>
+												</ul>
+											</div>
+										</article>
+										<article>
+											<a href="https://rexcue.netlify.app" class="image"><img src="images/rexcue_2.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Rexcue</h4>
+												<p>Animal adoption finder tool that helps to highlight dog-breeds that are often overlooked at adoption shelters. Click the image to see the live-site.</p>
+												<ul class="actions">
+													<li><a href="https://github.com/naldridge/Rexcue" class="button primary fit">Visit the Repo</a></li>
+												</ul>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pokemon_python_1.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Pokemon Python-version</h4>
+												<p>Pokemon-gym battle rpg. Inspired by the classic pokemon games and fully-developed using Python. Relive the intense experience of selecting your pokemon and navigating a hidden base on your console!</p>
+												<ul class="actions">
+													<li><a href="https://github.com/naldridge/pokemon_python_version" class="button primary fit">Visit the Repo</a></li>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
+
+						<!-- Four -->
+							<section id="four">
+								<div class="container">
+									<h3>Reach Out!</h3>
+									<section>
+										<p>I am currently living in Houston, TX while I complete the DigitalCrafts full-time Web
+											Development bootcamp. However, when I finish the program I intend to travel the country and
+											therefore I am actively looking for remote-work opportunities. Please feel free to contact
+											me if you have an
+											opportunity you'd like to share.</p>
+										<form method="get" action="images/Nick_Aldridge_Resume.pdf">
+											<ul class="actions">
+												<li><button class="button primary" type="submit">Download Resume</button></li>
+											</ul>
+										</form>
+									</section>
+								</div>
+							</section>
+
+
+
+					</div>
+
+				<!-- Footer -->
+					<section id="footer">
+						<div class="container">
+							<ul class="copyright">
+								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
-						</form>
+						</div>
+					</section>
 
-					</section>
-					<section>
-						<ul class="contact">
-							<li>
-								<h3>Homebase</h3>
-								<span>Houston, TX</span>
-							</li>
-							<li>
-								<h3>Social</h3>
-								<ul class="icons">
-									<li><a href="https://github.com/naldridge" class="icon brands fa-github"><span
-												class="label">GitHub</span></a></li>
-									<li><a href="https://www.linkedin.com/in/nicholas-aldridge-177479145/"
-											class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
-									</li>
-								</ul>
-							</li>
-						</ul>
-					</section>
-				</div>
 			</div>
-		</section>
 
-	</div>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-	<!-- Footer -->
-	<footer id="footer" class="wrapper style1-alt">
-		<div class="inner">
-			<ul class="menu">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-			</ul>
-		</div>
-	</footer>
-
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-
-</body>
-
+	</body>
 </html>
