--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/logo_small.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Nick Aldridge</a></h1>
-					<p>Jr. Web Developer<br />
+					<p>Software Developer<br />
 					Passionate Star Wars Fan</p>
 				</header>
 				<nav id="nav">
@@ -55,7 +55,7 @@
 										<p>Entry-level computer programmer,<br />
 										senior-level Star Wars Fan.</p>
 									</header>
-									<p>I'm a Full-Stack Web Developer student in the DigitalCrafts bootcamp based in Houston, TX. I'm currently looking for remote positions that utilize my skills, as well as helps me to grow in the development community. I have experience putting together full-stack projects with the PERN stack along with some Python, VBA, and analytical skills</p>
+									<p>I'm a Software Developer living in Ardmore, OK. I'm currently looking for a position that will utilize my skills, as well as help me to grow in a team environment. I have experience designing and implementing full-stack projects with the PERN stack along with Python, VBA, and C++.</p>
 					
 									<p>On a personal note, I'm a fan of the Houston Astros, Star Wars, and any reason I can find to spend time outdoors. Serving in the Air Force allowed me the opportunity to travel and see more cultures than I could have imagined and it has left a lasting impression and desire to share those experiences. I also have a passion for animal advocacy and working with the community to improve our understanding of our impacts on the environment.</p>
 								</div>
@@ -65,7 +65,11 @@
 							<section id="two">
 								<div class="container">
 									<h3>Professional Skillset</h3>
-									<p>With 10 years of experience as an Intelligence Analyst, I utlize the critical-thinking and analytical
+									<p>2 years as a professional Software Developer. I have worked mostly as the sole, in-house developer
+										for a pump manufacturer. I have worked on projects ranging from website management, CNC communication,
+										Quality Control applications, and more. I have worked extensively in Javascript (through the React framework),
+										in Node.JS for RESTful APIs, and Python for miscellaneous projects.
+									<p>10 years of experience as an Intelligence Analyst for the USAF, I utlize the critical-thinking and analytical
 										skills in combination with the technical resources and languages to solve problems and develop
 										tools.</p>
 									<ul class="feature-icons">
@@ -82,7 +86,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Project Highlights</h3>
+									<h3>Bootcamp Project Highlights</h3>
 									<p>Looking at my programming projects is a sure-fire way to get a close look at my interests. Whether it's supporting local adoption shelters or trying to make travel a little more headache-free, my personality is on full display.</p>
 									<div class="features">
 										<article>
@@ -124,12 +128,9 @@
 								<div class="container">
 									<h3>Reach Out!</h3>
 									<section>
-										<p>I am currently living in Houston, TX while I complete the DigitalCrafts full-time Web
-											Development bootcamp. However, when I finish the program I intend to travel the country and
-											therefore I am actively looking for remote-work opportunities. Please feel free to contact
-											me if you have an
-											opportunity you'd like to share.</p>
-										<form method="get" action="images/Nick_Aldridge_Resume.pdf">
+										<p>I am currently living in Ardmore, OK. However, when I am looking for opportunities in MN pending relocation. Please feel free to contact
+											me if you have an opportunity you'd like to share.</p>
+										<form method="get" action="images/Resume_2023.pdf">
 											<ul class="actions">
 												<li><button class="button primary" type="submit">Download Resume</button></li>
 											</ul>
